*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.29 ===
* Implemented functions for quick computing of sine, cosine, logarithm and exponent
  with precision loss.
* Implemented linear, constant power, exponential and exponential with precision loss
  interpolation functions.
* Updated build scripts.

=== 1.0.28 ===
* Added 'listen' playback mode for the sampler in dspu::Sampler.
* Added support of build for MacOS.
* Updated module versions in dependencies.

=== 1.0.27 ===
* Implemented TruePeak meter.
* Implemented Panorama meter (Panometer).
* Implemented ScaledMeterGraph with subsampling option.
* Implemented QuantizedCounter statistics tool.
* Implemented ILUFSMeter - integrated LUFS meter.
* Several fixes and improvements in RawRingBuffer.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.26 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.25 ===
* Several updates of the dspu::LoudnessMeter module.
* Bugfixes and improvements in shared memory catalog and clients.
* Added dspu::Bypass::process_drywet method.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.24 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.23 ===
* Updated module versions in dependencies.

=== 1.0.22 ===
* Implemented shared catalog class.
* Implemented shared audio stream class.
* Updated module versions in dependencies.

=== 1.0.21 ===
* Implemented safer algorithm of loading sample when the underlying stream
  does not know the actual number of frames in the stream.
* Implemented dspu::Correlometer module.
* Optimized LFO sin-based and log-based functions.
* Fixed DynamicDelay buffer not cleaned up on initialization, garbage could be produced.
* Implemented dspu::RawRingBuffer which is better suitable for direct memory operations.